--- a/src/public/css/category.css
+++ b/src/public/css/category.css
@@ -1,32 +1,67 @@
-/*.corpo {
+/*DEPARTAMENTO*/
+
+.deptHomeWeb {
+    display: none;
+  
+  }
+  
+  /* OFERTA */
+  .ctn-category {
+    font-size: clamp(2rem, 2.5vw, 2.8rem);
+  
+  }
+  
+  .ctn-category>h2 {
+    padding: 16px 22px;
+    text-transform: uppercase;
+    margin-top: 0px;
+    text-align: center;
+  }
+  
+  .category-item {
     display: flex;
-    align-items: center;
-    }*/
-
-.category-box {
-    color: #ff4500;
-    font-size: 18px;
-    margin-left: 24px;
-    margin-block-start: 24px ;
-    text-decoration: blue underline 3px; 
-}
-
-
-.products-box {
-    font-size: 12px;
-    align-items: center;
-    display: inline-block;
-    width: 300px;
-    height: 150px;
-    border: 3px solid blue;
-    padding: 50px;
-    margin: 23px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-
-.background {
-    background-color: blue;
-    width: 100%;
-    padding: 13px;
-}
+    flex-wrap: wrap;
+    justify-content: center;
+    border-bottom: 2px solid var(--gray-color);
+    margin: 1rem;
+  }
+  
+  .ctn-category {
+    margin: 10rem;
+    /* border-top: 1px solid var(--gray-color); */
+  }
+  
+  .pname {
+    font-size: clamp(2rem, 2.5vw, 2.8rem);
+    text-align: center;
+    margin-bottom: 0.8rem;
+  }
+  
+  
+  /*  MEDIA QUERIES */
+  @media (min-width: 800px) {
+  
+    .ctn-category{
+      background-color: #fff;
+      
+    }
+  
+  
+  
+    .category-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-auto-rows: auto;
+      grid-gap: 1rem;
+    }
+  
+    .category-item {
+  
+      border: 2px solid #e7e7e7;
+      border-radius: 4px;
+      padding: .5rem;
+  
+    }
+   
+  
+  }
