--- a/src/views/partials/user-box.ejs
+++ b/src/views/partials/user-box.ejs
@@ -1,6 +1,6 @@
-<div class="lado-esquerdo">
-  <div class="user-details">
-    <div class="client-avatar">
+<div class="user-menu">
+  <div class="user-menu-box">
+    <div class="user-avatar">
       <img src="/images/avatar.png" alt="Avatar" class="avatar">
     </div>
     
