--- a/src/views/pedido-finalizado.ejs
+++ b/src/views/pedido-finalizado.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <%- include("./partials/head")%>
-  <link rel="stylesheet" href="/css/main.css" />
-  <link rel="stylesheet" href="/css/confirmacaoPedido.css" />
+  <link rel="stylesheet" href="/css/global.css" />
+  <link rel="stylesheet" href="/css/orders.css" />
   
   <body>
     <!--header-->
     <%- include("./partials/header") %>
     <!--header-end-->
-    <main>
+    <main class= "orders">
         <div class = "pfinalizado">
             <div class ="ctn-detalhe-pedido">
                 <h2>Pedido realizado com sucesso!</h2>
