--- a/src/views/categoria.ejs
+++ b/src/views/categoria.ejs
@@ -1,47 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-  <%- include("./partials/head")%>
-  <link rel="stylesheet" href="/css/global.css" />
-  <link rel="stylesheet" href="/css/category.css" />
-
-  <body>
-    <!--header-->
-    <%- include("./partials/header") %>
-    <!--header-fim-->
+<%- include("./partials/head")%>
+<link rel="stylesheet" href="/css/global.css" />
+<link rel="stylesheet" href="/css/category.css" />
 
 
-    <div class = "category-box">
-      <h2> Categorias </h2>
+<body>
+  <!--header-->
+  <%- include("./partials/header") %>
+  <!--header-fim-->
 
-    </div>
-    <nav class = "menu">
-      <ul>
-        <li>produto 1</li>
-        <li>produto 2</li>
-        <li>produto 3</li>
-        <li>produto 4</li>
-        <li>produto 5</li>
-        <li>produto 6</li>
-      </ul>
-    </nav>
 
-  </section>
+  <div class="ctn-category">
+    <%- include("./partials/category") %>
+  </div>
 
-              <section>
-
-                <div class="products-box">produto1</div>
-                  <div class="products-box">produto2</div>
-                    <div class="products-box">produto3</div>
-                      <div class="products-box">produto4</div>
-                        <div class="products-box">produto5</div>
-                          <div class="products-box">produto6</div>
-
-              </section>
-
-    <!--Footer-->
+  <!--Footer-->
+  <div class="footerBox">
     <%- include("./partials/footer") %>
-    <!--footer-fim-->
+  </div>
+  <!--footer-fim-->
 
-  </body>
+</body>
+
 </html>
