--- a/src/views/painel.ejs
+++ b/src/views/painel.ejs
@@ -2,25 +2,25 @@
 <html lang="pt-BR">
 
 <%- include("./partials/head")%>
-<link rel="stylesheet" href="/css/main.css" />
-<link rel="stylesheet" href="/css/confirmacaoPedido.css" />
+<link rel="stylesheet" href="/css/global.css" />
+<link rel="stylesheet" href="/css/orders.css" />
 
 <body>
   <!--header-->
   <%- include("./partials/header") %>
   <!--header-fim-->
-  <main class="corpo">
-    
-    <div class="painel-usuario">
+
+  <div class="user-panel">
     <!-- panel-user -->
     <%- include("./partials/user-box") %>
     <!--panel-user-end-->
-    </div>
-   
-  </main>
+  </div>
+
+  <div class="footerBox"></div>
   <!--footer-->
   <%- include("./partials/footer") %>
   <!--footer-fim-->
+  </div>
 
 </body>
 
