--- a/src/views/departamentos.ejs
+++ b/src/views/departamentos.ejs
@@ -3,7 +3,7 @@
 
 <%- include("./partials/head")%>
 <link rel="stylesheet" href="/css/global.css" />
-<link rel="stylesheet" href="/css/category.css" />
+<link rel="stylesheet" href="/css/department.css" />
 
 
 <body>
@@ -13,11 +13,12 @@
 
 
   <div class="ctn-category">
-    <%- include("./partials/category") %>
+    <%- include("./partials/department") %>
   </div>
 
   <!--Footer-->
   <div class="footerBox">
+    <hr> 
     <%- include("./partials/footer") %>
   </div>
   <!--footer-fim-->
