--- a/src/views/painel.ejs
+++ b/src/views/painel.ejs
@@ -3,7 +3,7 @@
 
 <%- include("./partials/head")%>
 <link rel="stylesheet" href="/css/global.css" />
-<link rel="stylesheet" href="/css/orders.css" />
+<link rel="stylesheet" href="/css/panel.css" />
 
 <body>
   <!--header-->
