--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,6 +1,6 @@
-<footer class="rodape-principal">
-    <div class = "rodape">
-        <div class="usuario">
+<footer class="footerBoxMain ">
+    <div class = "footerBoxMainGrid">
+        <div class="footerUser">
             <h2>USUÁRIO</h2>
             <ol>
                 <a href="/login"><li>LOGIN</li></a>
