--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -50,9 +50,8 @@
           </div>
         </label>
         <ul id="navbar-list">
-          <li><a href="/produto">Home</a></li>
           <li><a href="/produto">News</a></li>
-          <li><a href="/produto">Smartphones</a></li>
+          <li><a href="/Departamentos">Departamentos</a></li>
           <li><a href="/produto">Computadores</a></li>
           <li><a href="/produto">Gamer</a></li>
           <li><a href="/produto">Hardware</a></li>
@@ -60,14 +59,30 @@
           <li><a href="/produto">Contato</a></li>
         </ul>
       </nav>
-      <div class="topnav" id="myTopnav">
+      <nav class="desktop-navbar"></nav>
+      <ul class="topnav" id="myTopnav">
+          <li><a href="/produto">News</a></li>
+          <li><a href="/departamentos">Departamentos</a></li>
+            <ul>
+              <li><a href="/produto">Computadores</a></li>
+              <li><a href="/produto">Games</a></li>
+              <li><a href="/produto">Hardware</a></li>
+              <li><a href="/produto">Periféricos</a></li> 
+              <li><a href="/produto">TV</a></li>
+              <li><a href="/produto">Celulares & Telefones</a></li>
+            </ul>
+          <li><a href="/produto">Sobre Nós</a></li>
+          <li><a href="/produto">Contato</a></li>
+
+      </ul>
+      <!-- <div class="topnav" id="myTopnav">
         <a href="/">Home</a>
         <a href="/produto">News</a>
         <a href="/produto">Informatica</a>
         <a href="/produto">Smartphones</a>
         <a href="/produto">Sobre Nós</a>
         <a href="/produto">Contato</a>
-      </div>
+      </div> -->
     </div>
   </div>
 
