--- a/src/views/produto.ejs
+++ b/src/views/produto.ejs
@@ -4,7 +4,6 @@
 <link rel="stylesheet" href="/css/global.css" />
 <link rel="stylesheet" href="/css/product.css" />
  <!-- Scripts -->
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
  <script src="/scripts/main.js" charset="utf-8"></script>
  <body>
     <!--header-->
@@ -82,5 +81,6 @@
   </div>
   <!--footerEnd-->
 </body>
-
+<!-- Scripts -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
 </html>
