--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -29,25 +29,30 @@
   <!--header-end-->
  
     
-  <div class="ctn-login-page-box">
-    <form id="form_login">
-    <label class="login-input-label">
-      <input class="login-input" name="user" type="user" placeholder="Usuario" />
-    </label>
+  <main class="ctn-login-page-box">
+        <form method="POST" action="/login" id="form_login">
+        <label class="login-input-label">
+          <input class="login-input" type="email" name="email" placeholder="Digite seu email"  />
+        </label>
 
-    <label class="login-input-label">
-      <input class="login-input" name="password" type="password" placeholder="Senha " />
-    </label>
-    <label>
-      <button class="login-submit-btn" type="submit">Entrar</button>
-    </label>
-    <div class="forget-password">
-      <p class= "login-info">
-        Esqueceu a senha? <a><strong>clique aqui</strong></a>
-      </p>
-    </div>
-  </form>
-  </div>
+        <label class="login-input-label">
+          <input class="login-input" type="password" name="password" placeholder="Senha"/>
+        </label>
+        <label>
+          <button class="login-submit-btn" type="submit">Entrar</button>
+        </label>
+        <div class="forget-password">
+          <p class= "login-info">
+            Esqueceu a senha? <a><strong>clique aqui</strong></a>
+          </p>
+        </div>
+        <div class="register-card">
+          <p class= "login-info">
+            Não tem uma conta? <a href="/registro"><strong>Cadastre-se</strong></a>
+          </p>
+        </div>
+      </form>
+  </main>
 
   <div class="footerBox">
     <%- include("../partials/footer") %>
