--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -1,24 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      
-      
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-          href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap"
-          rel="stylesheet"
-        />
-        <link
-          rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-        />
-        <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
-        <title>Register</title>
-      </head>
+  <%- include("../partials/head")%>
 <link rel="stylesheet" href="/css/global.css" />
 <link rel="stylesheet" href="/css/login.css" />
 
