--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -15,5 +15,5 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
   />
   <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
-  <title><%= page %></title>
+  <title><%= typeof page !== 'undefined'? page : "Infodev" %></title>
 </head>
