--- a/src/views/auth/cadastro.ejs
+++ b/src/views/auth/cadastro.ejs
@@ -17,7 +17,7 @@
       <p>Cadastre-se para ver fotos dos seus amigos</p>
     </div>
     <form 
-    action="/registro"
+    action="/cadastro"
     method="POST"
     class="form-auth card">
       <div id="logo">
