--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -5,7 +5,7 @@
             <h2>USUÁRIO</h2>
             <ol>
                 <a href="/login"><li>LOGIN</li></a>
-                <a href= "/user-panel"><li>MEUS PEDIDOS</li></a>
+                <a href= "/painel"><li>MEUS PEDIDOS</li></a>
                 <a><li>FAVORITOS</li></a>
                 <a><li>MEUS CUPONS</li></a>
             </ol>
