--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -56,7 +56,7 @@
           <li><a href="/produto">Gamer</a></li>
           <li><a href="/produto">Hardware</a></li>
           <li><a href="/produto">Sobre Nós</a></li>
-          <li><a href="/produto">Contato</a></li>
+          <li><a href="/contato">Contato</a></li>
         </ul>
       </nav>
       <nav class="desktop-navbar"></nav>
@@ -72,7 +72,7 @@
               <li><a href="/produto">Celulares & Telefones</a></li>
             </ul>
           <li><a href="/produto">Sobre Nós</a></li>
-          <li><a href="/produto">Contato</a></li>
+          <li><a href="/contato">Contato</a></li>
 
       </ul>
       <!-- <div class="topnav" id="myTopnav">
