--- a/src/views/partials/user-box.ejs
+++ b/src/views/partials/user-box.ejs
@@ -3,34 +3,36 @@
     <div class="user-avatar">
       <img src="/images/avatar.png" alt="Avatar" class="avatar">
     </div>
-    
-    <div class = "user-info">
-    <h2>Jeffrey Tech</h2>
-    <p>address@hotmail.com</p>
+
+    <div class="user-info">
+      <h2>Jeffrey Tech</h2>
+      <p>address@hotmail.com</p>
     </div>
-    <label>
-      <button class="profile-btn" type="submit">Meus pedidos</button>
-    </label>
-    <label>
-      <button class="profile-btn" type="submit">Notificações</button>
-    </label>
-    <label>
-      <button class="profile-btn" type="submit">Cadastro</button>
-    </label>
-    <label>
-      <button class="profile-btn" type="submit">Pedidos</button>
-    </label>
-    <label>
-      <button class="profile-btn" type="submit">Avaliações</button>
-    </label>
-    <label>
-      <button class="profile-btn" type="submit">Sorteios</button>
-    </label>
-    <label>
-      <button class="profile-btn" type="submit">Arrempendimento</button>
-    </label>
-    <label>
-      <button class="profile-btn" type="submit">Garantia</button>
-    </label>
+    <div class="user-profile-buttons">
+      <label>
+        <button class="profile-btn" type="submit">Meus pedidos</button>
+      </label>
+      <label>
+        <button class="profile-btn" type="submit">Notificações</button>
+      </label>
+      <label>
+        <button class="profile-btn" type="submit">Cadastro</button>
+      </label>
+      <label>
+        <button class="profile-btn" type="submit">Pedidos</button>
+      </label>
+      <label>
+        <button class="profile-btn" type="submit">Avaliações</button>
+      </label>
+      <label>
+        <button class="profile-btn" type="submit">Sorteios</button>
+      </label>
+      <label>
+        <button class="profile-btn" type="submit">Arrempendimento</button>
+      </label>
+      <label>
+        <button class="profile-btn" type="submit">Garantia</button>
+      </label>
+    </div>
   </div>
 </div>
