--- a/src/views/admin/painel-usuario.ejs
+++ b/src/views/admin/painel-usuario.ejs
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<%- include("./partials/head")%>
+<%- include("../partials/head")%>
 <link rel="stylesheet" href="/css/global.css" />
 <link rel="stylesheet" href="/css/panel.css" />
 
 <body>
   <!--header-->
-  <%- include("./partials/header") %>
+  <%- include("../partials/header") %>
   <!--header-fim-->
 
   <div class="user-panel">
     <!-- panel-user -->
-    <%- include("./partials/user-box") %>
+    <%- include("../partials/user-box") %>
     <!--panel-user-end-->
   </div>
 
   <div class="footerBox"></div>
   <!--footer-->
-  <%- include("./partials/footer") %>
+  <%- include("../partials/footer") %>
   <!--footer-fim-->
   </div>
 
