--- a/src/views/categorias.ejs
+++ b/src/views/categorias.ejs
@@ -13,7 +13,7 @@
 
 
   <div class="ctn-category">
-    <%- include("./partials/department") %>
+    <%- include("./partials/category") %>
   </div>
 
   <!--Footer-->
