--- a/src/views/partials/category.ejs
+++ b/src/views/partials/category.ejs
@@ -1,4 +1,4 @@
-<h2>Departamentos</h2>
+<h2>Categorias</h2>
 <div class="category-grid">
     <div class="category-item">
         <div class="category-card">
