--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -21,7 +21,7 @@
             data-icon="bi:suit-heart"
           ></span
         ></a>
-        <a href="/carrinho"
+        <a href="3"
           ><span class="iconify" data-inline="false" data-icon="bi:cart"></span
         ></a>
       </div>
@@ -51,27 +51,27 @@
         </label>
         <ul id="navbar-list">
           <li><a href="/produto">News</a></li>
-          <li><a href="/Departamentos">Departamentos</a></li>
-          <li><a href="/produto">Computadores</a></li>
-          <li><a href="/produto">Gamer</a></li>
-          <li><a href="/produto">Hardware</a></li>
-          <li><a href="/produto">Sobre Nós</a></li>
-          <li><a href="/contato">Contato</a></li>
+          <li><a href="/produtos/categorias">Categorias</a></li>
+          <li><a href="/produtos">Computadores</a></li>
+          <li><a href="/produtos">Gamer</a></li>
+          <li><a href="/produtos">Hardware</a></li>
+          <li><a href="/produtos">Sobre Nós</a></li>
+          <li><a href="/contatos">Contato</a></li>
         </ul>
       </nav>
       <nav class="desktop-navbar"></nav>
       <ul class="topnav" id="myTopnav">
-          <li><a href="/produto">News</a></li>
-          <li><a href="/departamentos">Departamentos</a></li>
+          <li><a href="/produtos">News</a></li>
+          <li><a href="/produtos/categorias">Categorias</a></li>
             <ul>
-              <li><a href="/produto">Computadores</a></li>
-              <li><a href="/produto">Games</a></li>
-              <li><a href="/produto">Hardware</a></li>
-              <li><a href="/produto">Periféricos</a></li> 
-              <li><a href="/produto">TV</a></li>
-              <li><a href="/produto">Celulares & Telefones</a></li>
+              <li><a href="/produtos">Computadores</a></li>
+              <li><a href="/produtos">Games</a></li>
+              <li><a href="/produtos">Hardware</a></li>
+              <li><a href="/produtos">Periféricos</a></li> 
+              <li><a href="/produtos">TV</a></li>
+              <li><a href="/produtos">Celulares & Telefones</a></li>
             </ul>
-          <li><a href="/produto">Sobre Nós</a></li>
+          <li><a href="/produtos">Sobre Nós</a></li>
           <li><a href="/contato">Contato</a></li>
 
       </ul>
