--- a/src/views/produto.ejs
+++ b/src/views/produto.ejs
@@ -82,4 +82,5 @@
 </body>
 <!-- Scripts -->
 <script src="/scripts/main.js" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
 </html>
